--- a/profile.html
+++ b/profile.html
@@ -13,35 +13,56 @@
 	<div class='container '>
 		{% include 'options.html' %}
     </div>
-	{%block new%}
-	<form action="{% url 'search' %}" method="get">
-		<input name="q" type="text" placeholder="Search...">
-	  </form>
-	{%endblock new%}
 	{%block content%}
 	<div class="container">
-		<table class="table table-striped">
+	<table class="table table-striped">
 		<thead>
-			<tr>
-				<th>Author</th>
-				<th>Music</th>
-				<th>Title</th>
-				<th>Genre</th>
-				<th>Submission Date</th>
-			</tr>
-			</thead>
-			<tbody>
-				{% for mu in music %}  
-				<tr>
-				<td>{{mu.sampledepotappusers.username}}</td>
-				<td>{{mu.music_id}}</td>
-				<td>{{mu.title}}</td>
-				<td>{{mu.genre_id}}</td>
-				<td>{{mu.submission_date}}</td>
-			</tr>
-				{% endfor %} 
-	</tbody>
+		  <tr>
+		    <th>Username</th>
+		 		<th>First Name</th>
+				<th>Last Name</th>
+				<th>Date Joined</th>
+				<th>User ID</th>
+                <th>Count</th>
+		    </tr>
+		   </thead>
+		   <tbody>
+		    	{% for us in users %}  
+		     <tr>
+		        <td>{{us.username}}</td>
+		           <td>{{us.first_name}}</td>
+		    		<td>{{us.last_name}}</td>
+				<td>{{us.date_joined}}</td>
+				<td>{{us.user_id}}</td>
+                <td>{{count}}</td>
+	 	  </tr>
+	      	  {% endfor %} 
+  	</tbody>
 	</table>
+	<div class="container">
+		<table class="table table-striped">
+			<thead>
+			  <tr>
+				<th>Music</th>
+					<th>Title</th>
+					<th>Genre</th>
+					<th>Likes</th>
+					<th>Submission Date</th>
+				</tr>
+			   </thead>
+			   <tbody>
+					{% for mu in music %}  
+				 <tr>
+					<td>{{mu.music_id}}</td>
+					<td>{{mu.title}}</td>
+					<td>{{mu.genre_id}}</td>
+					<td>{{mu.likes}}</td>
+					<td>{{mu.submission_date}}</td>
+			   </tr>
+					{% endfor %} 
+		  </tbody>
+		</table>	
+	</div>
 	{%endblock%}
 			<!--
 			<div class="container">  
